update(controllerLogin.js, controllerRegistro.js, registro.html, login.html, style.css): conclusão html's e js's

--- a/src/paginas/login.html
+++ b/src/paginas/login.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>KenzieFood Login</title>
+
 </head>
 <body>
+
+  <div class="modalErroLogin">
+  
+    <div class="containerModalContent">
+      
+      <p>Usuário e senha não existem.</p>
+      <button class="botaoModalErroLogin">X</button>
+    
+    </div>  
+  
+  </div>
 
   <section class="containerFormLogin">
 
@@ -24,6 +36,7 @@
 
   </section>
 
-  <script src="../js/controllers/controllerLogin.js"></script>
+
+  <script type="module" src="../js/controllers/controllerLogin.js"></script>
 </body>
 </html>
