create metodo de listar produtos e listar no carrinho.

--- a/index.html
+++ b/index.html
@@ -33,28 +33,9 @@
 
     <main class="mainVitrine">
         <section class="vitrineCardapio">
-            <ul class="vitrineCardapio-produtos">
-                <!-- <li class="vitrineCardapio-produtos-listar">
-                    <img class="imgCardapio" src="./src/img/hamburguer.jpg" alt="">
-                    <h2 class="h2Cardapio">Hamburguer Artesanal</h2>
-                    <p>um delicioso hamburguer com queijo e bacon acompanhado
-                    de batatas fritas e maionese caseira</p>
-                    <div class="divPreco">
-                        <span class="preco">R$: 29,90</span> 
-                        <button class="btnAddCarrinho"><img class="imgCart" src="./src/img/carrinho1.png" alt=""></button>
-                    </div>
-                </li> -->
-                <!-- <li class="vitrineCardapio-produtos-listar">
-                    <img class="imgCardapio" src="./src/img/hamburguer.jpg" alt="">
-                    <h2 class="h2Cardapio">Hamburguer Artesanal</h2>
-                    <p>um delicioso hamburguer com queijo e bacon acompanhado
-                    de batatas fritas e maionese caseira</p>
-                    <div class="divPreco">
-                        <span class="preco">R$: 29,90</span> 
-                        <button class="btnAddCarrinho"><img class="imgCart" src="./src/img/carrinho1.png" alt=""></button>
-                    </div>
-                </li> -->
-            </ul>
+            <ul class="vitrineCardapio-produtos"> </ul>
+                
+           
         </section>
         <aside>
             <header class="headerCarrinho">
@@ -62,7 +43,7 @@
             </header>
             <section class="vitrineCarrinho">
                 <ul class="vitrineCardapio-produtos vitrineCarrinho" >
-                    <li class="carrinhoListar">
+                    <!-- <li class="carrinhoListar">
                             <img class="imgCarrinho" src="./src/img/hamburguer.jpg" alt="">
                             <h2 class="h2Cardapio">Hamburguer Artesanal</h2>
                             <p>Categoria</p>
@@ -73,7 +54,7 @@
                         <h2 class="h2Cardapio">Hamburguer Artesanal</h2>
                         <p>Categoria</p>
                         <span class="preco">R$: 29,90</span> 
-                </li>
+                </li> -->
                 </ul>
             </section>
         </aside>
