update(index.html, css, script): incluído botão de login na home

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <button class="btnPesquisar" type="submit">&#128269;</button>
             <!-- <img src="lupinha.png" alt="imagem de uma lupa no campo de busca."> -->
         </div>
+
+        <button class="btnLogin">Entrar</button>
     </header>
     <nav class="categorias">
         <ul class="listaDeBusca">
