update(style.css, login.html, registro.html): atualização css e do html

--- a/src/paginas/login.html
+++ b/src/paginas/login.html
@@ -15,9 +15,17 @@
   
     <div class="containerModalContent">
       
-      <p>Usuário e senha não existem.</p>
-      <button class="botaoModalErroLogin">X</button>
-    
+      <div class="modalHeader">
+        <h2>Status</h2>
+        <button class="botaoModalErroLogin">X</button>
+      </div>
+
+      <div class="modalContent">
+        <p>Usuário e senha não existem.</p>
+      </div>
+
+      <div class="modalErroFooter"></div>
+
     </div>  
   
   </div>
