update(login.html, registro.html, style.css): adicionei logo e links nos html's e finalizado estilização

--- a/src/paginas/login.html
+++ b/src/paginas/login.html
@@ -32,6 +32,7 @@
 
   <section class="containerFormLogin">
 
+    <img class= "logoLogin" src="../img/headerKenzie.png" alt="logoKenzieFood">
     <h2 class="tituloLogin">Login</h2>
     
     <form class="formularioLogin" action="">
@@ -42,8 +43,11 @@
 
     </form>
 
-  </section>
+    <div class="cadastroLogin">
+      <span>Se não tem cadastro clique <a href="./registro.html">aqui</a>.</span>
+    </div>
 
+  </section>
 
   <script type="module" src="../js/controllers/controllerLogin.js"></script>
 </body>
