--- a/src/paginas/registro.html
+++ b/src/paginas/registro.html
@@ -50,6 +50,7 @@
 
     <section class="containerFormCadastro">
 
+        <img class="logoCadastro" src="../img/headerKenzie.png" alt="logoKenzieFood">
         <h2 class="tituloCadastro">Cadastro</h2>
 
         <form class="formularioCadastro" action="">
@@ -59,9 +60,11 @@
             <button id="buttonCadastro">Cadastrar</button>
         </form>
 
+        <div class="loginCadastro">
+            <span>Se já possui cadastro clique <a href="./login.html">aqui</a>.</span>
+        </div>
+
     </section>
-
-
 
     <script type="module" src="../js/controllers/controllerRegistro.js"></script>
 </body>
