--- a/src/paginas/adm.html
+++ b/src/paginas/adm.html
@@ -33,9 +33,16 @@
 
     <main class="mainAdm">
         <section class="vitrineAdm">
-            <ul class="vitrineAdm-produtos">
+            <table class="vitrineAdm-produtos">
+                <tr class="vitrineAdm-produtos-listar-header">
+                    <td class="vitrineAdm-produtos-listar-td-1"><p class="vitrineAdm-produtos-listar-header-p">  Produto </p> </td>
+                    <td class="vitrineAdm-produtos-listar-td-2"><p class="vitrineAdm-produtos-listar-header-p"> </td>
+                    <td class="vitrineAdm-produtos-listar-td-3"><p class="vitrineAdm-produtos-listar-header-p"> Categorias </td>
+                    <td class="vitrineAdm-produtos-listar-td-4"><p class="vitrineAdm-produtos-listar-header-p"> Descrição </td>
+                    <td class="vitrineAdm-produtos-listar-td-5"><p class="vitrineAdm-produtos-listar-header-p"> Ações </td>
+                </tr>
                 
-            </ul>
+            </table>
         </section>
 
     </main>
