fix: ajustado direcionamento do login

--- a/src/paginas/adm.html
+++ b/src/paginas/adm.html
@@ -11,7 +11,7 @@
 <body>
     <header class="headerVitrine">
         <div class="nomeDoRestaurante">
-            <a href="../index.html"><img class="imgHeader" src="../img/headerKenzie.png" alt=""></a>
+            <a href="./../../index.html"><img class="imgHeader" src="../img/headerKenzie.png" alt=""></a>
         </div>
         <div class="divBuscar">
             <input class="inputBuscar" type="search" placeholder="pesquisar por produto">
