--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             <input class="inputBuscar" type="search" placeholder="pesquisar por produto">
             <button class="btnPesquisar" type="submit">&#128269;</button>
             <!-- <img src="lupinha.png" alt="imagem de uma lupa no campo de busca."> -->
+            
         </div>
 
         <button class="btnLogin">Entrar</button>
+        <button class="btnLogout">Sair</button>
     </header>
     <nav class="categorias">
         <ul class="listaDeBusca">
