update(adm.js, controllerAdm.js, style.css, adm.html): inicio modal de edicao

--- a/src/paginas/adm.html
+++ b/src/paginas/adm.html
@@ -33,6 +33,34 @@
         </div>
     </nav>
 
+    <div class="modalEdicao">
+        <div class="headModEdicao">
+            <h3>Edição de Produto</h3>
+            <button class="modalExit">X</button>
+        </div>
+        <div class="modalNomeDesc">
+            <h3>Nome do Produto</h3>
+            <input id="inputModEditNome" type="text">
+            <h3>Descrição</h3>
+            <input id="inputModEditDesc" type="text">
+        </div>
+        <div class="modalBtnCateg">
+            <h3>Categorias</h3>
+            <button id="btnPaniCat">Panificadora</button>
+            <button id="btnFrutCat">Frutas</button>
+            <button id="btnBebCat">Bebidas</button>
+        </div>
+        <div class="modalPrecoImg">
+            <h3>Valor do Produto</h3>
+            <input id="inputModEditValor" type="text">
+            <h3>Link da imagem</h3>
+            <input id="inputModEditUrl" type="url">
+        </div>
+        <div class="footModEdicao">
+            <button>Salvar Alterações</button>
+        </div>
+    </div>
+
     <main class="mainAdm">
         <section class="vitrineAdm">
             <table class="vitrineAdm-produtos-header">
