update(adm.html):fix placeholder

--- a/src/paginas/adm.html
+++ b/src/paginas/adm.html
@@ -40,9 +40,9 @@
         </div>
         <div class="modalNomeDesc">
             <h3>Nome do Produto</h3>
-            <input id="inputModEditNome" type="text" placeholder="Digitar o nome">
+            <input id="inputModEditNome" type="text">
             <h3>Descrição</h3>
-            <input id="inputModEditDesc" type="text" placeholder="Digitar a descrição">
+            <input id="inputModEditDesc" type="text">
         </div>
         <div class="modalBtnCateg">
             <h3>Categorias</h3>
@@ -54,9 +54,9 @@
         </div>
         <div class="modalPrecoImg">
             <h3>Valor do Produto</h3>
-            <input id="inputModEditValor" type="number" placeholder="Digitar o valor aqui">
+            <input id="inputModEditValor" type="number">
             <h3>Link da imagem</h3>
-            <input id="inputModEditUrl" type="url" placeholder="Inserir link">
+            <input id="inputModEditUrl" type="url">
         </div>
         <div class="footModEdicao">
             <button id="btnModSaveChanges">Salvar Alterações</button>
@@ -70,9 +70,9 @@
         </div>
         <div class="modalNomeDesc">
             <h3>Nome do Produto</h3>
-            <input id="inputModAddNome" type="text">
+            <input id="inputModAddNome" type="text" placeholder="Digitar o nome">
             <h3>Descrição</h3>
-            <input id="inputModAddDesc" type="text">
+            <input id="inputModAddDesc" type="text" placeholder="Digitar a descrição">
         </div>
         <div class="modalBtnCateg">
             <h3>Categorias</h3>
@@ -84,9 +84,9 @@
         </div>
         <div class="modalPrecoImg">
             <h3>Valor do Produto</h3>
-            <input id="inputModAddValor" type="number">
+            <input id="inputModAddValor" type="number" placeholder="Digitar o valor aqui">
             <h3>Link da imagem</h3>
-            <input id="inputModAddUrl" type="url">
+            <input id="inputModAddUrl" type="url" placeholder="Inserir link">
         </div>
         <div class="footModAdd">
             <button id="btnModSaveChangesAdd">Cadastrar</button>
